snapshots/DeepSpeech/native_client/kenlm/util/double-conversion/fast-dtoa.h.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 88
kind: unit
spaces:
  - name: kenlm_double_conversion
    start_line: 33
    end_line: 86
    kind: namespace
    spaces: []
    metrics:
      nargs:
        total_functions: 0
        total_closures: 0
        average_functions: 0
        average_closures: 0
        total: 0
        average: 0
        functions_min: 0
        functions_max: 0
        closures_min: 0
        closures_max: 0
      nexits:
        sum: 0
        average: NaN
        min: 0
        max: 0
      cognitive:
        sum: 0
        average: NaN
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        average: 1
        min: 1
        max: 1
      halstead:
        n1: 9
        N1: 28
        n2: 17
        N2: 18
        length: 46
        estimated_program_length: 98.016
        purity_ratio: 2.131
        vocabulary: 26
        volume: 216.22
        difficulty: 4.765
        level: 0.21
        effort: 1030.226
        time: 57.235
        bugs: 0.034
      loc:
        sloc: 54
        ploc: 15
        lloc: 3
        cloc: 35
        blank: 4
        sloc_average: 54
        ploc_average: 15
        lloc_average: 3
        cloc_average: 35
        blank_average: 4
        sloc_min: 54
        sloc_max: 54
        cloc_min: 35
        cloc_max: 35
        ploc_min: 15
        ploc_max: 15
        lloc_min: 3
        lloc_max: 3
        blank_min: 4
        blank_max: 4
      nom:
        functions: 0
        closures: 0
        functions_average: 0
        closures_average: 0
        total: 0
        average: 0
        functions_min: 0
        functions_max: 0
        closures_min: 0
        closures_max: 0
      mi:
        mi_original: 78.192
        mi_sei: 84.613
        mi_visual_studio: 45.726
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
metrics:
  nargs:
    total_functions: 0
    total_closures: 0
    average_functions: 0
    average_closures: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  nexits:
    sum: 0
    average: NaN
    min: 0
    max: 0
  cognitive:
    sum: 0
    average: NaN
    min: 0
    max: 0
  cyclomatic:
    sum: 2
    average: 1
    min: 1
    max: 1
  halstead:
    n1: 9
    N1: 28
    n2: 19
    N2: 21
    length: 49
    estimated_program_length: 109.24
    purity_ratio: 2.229
    vocabulary: 28
    volume: 235.56
    difficulty: 4.974
    level: 0.201
    effort: 1171.603
    time: 65.089
    bugs: 0.037
  loc:
    sloc: 88
    ploc: 19
    lloc: 3
    cloc: 63
    blank: 8
    sloc_average: 44
    ploc_average: 9.5
    lloc_average: 1.5
    cloc_average: 31.5
    blank_average: 4
    sloc_min: 54
    sloc_max: 54
    cloc_min: 35
    cloc_max: 35
    ploc_min: 15
    ploc_max: 15
    lloc_min: 3
    lloc_max: 3
    blank_min: 4
    blank_max: 4
  nom:
    functions: 0
    closures: 0
    functions_average: 0
    closures_average: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  mi:
    mi_original: 69.605
    mi_sei: 73.241
    mi_visual_studio: 40.705
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0

