snapshots/DeepSpeech/native_client/kenlm/util/double-conversion/fixed-dtoa.h.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
{
  "name": null,
  "start_line": 1,
  "end_line": 56,
  "kind": "unit",
  "spaces": [
    {
      "name": "kenlm_double_conversion",
      "start_line": 33,
      "end_line": 54,
      "kind": "namespace",
      "spaces": [],
      "metrics": {
        "nargs": {
          "total_functions": 0.0,
          "total_closures": 0.0,
          "average_functions": 0.0,
          "average_closures": 0.0,
          "total": 0.0,
          "average": 0.0,
          "functions_min": 0.0,
          "functions_max": 0.0,
          "closures_min": 0.0,
          "closures_max": 0.0
        },
        "nexits": {
          "sum": 0.0,
          "average": null,
          "min": 0.0,
          "max": 0.0
        },
        "cognitive": {
          "sum": 0.0,
          "average": null,
          "min": 0.0,
          "max": 0.0
        },
        "cyclomatic": {
          "sum": 1.0,
          "average": 1.0,
          "min": 1.0,
          "max": 1.0
        },
        "halstead": {
          "n1": 8.0,
          "N1": 17.0,
          "n2": 8.0,
          "N2": 8.0,
          "length": 25.0,
          "estimated_program_length": 48.0,
          "purity_ratio": 1.92,
          "vocabulary": 16.0,
          "volume": 100.0,
          "difficulty": 4.0,
          "level": 0.25,
          "effort": 400.0,
          "time": 22.22222222222222,
          "bugs": 0.01809611744396604
        },
        "loc": {
          "sloc": 22.0,
          "ploc": 4.0,
          "lloc": 1.0,
          "cloc": 16.0,
          "blank": 2.0,
          "sloc_average": 22.0,
          "ploc_average": 4.0,
          "lloc_average": 1.0,
          "cloc_average": 16.0,
          "blank_average": 2.0,
          "sloc_min": 22.0,
          "sloc_max": 22.0,
          "cloc_min": 16.0,
          "cloc_max": 16.0,
          "ploc_min": 4.0,
          "ploc_max": 4.0,
          "lloc_min": 1.0,
          "lloc_max": 1.0,
          "blank_min": 2.0,
          "blank_max": 2.0
        },
        "nom": {
          "functions": 0.0,
          "closures": 0.0,
          "functions_average": 0.0,
          "closures_average": 0.0,
          "total": 0.0,
          "average": 0.0,
          "functions_min": 0.0,
          "functions_max": 0.0,
          "closures_min": 0.0,
          "closures_max": 0.0
        },
        "mi": {
          "mi_original": 96.7482272884572,
          "mi_sei": 112.42922917245598,
          "mi_visual_studio": 56.57791069500421
        },
        "abc": {
          "assignments": 0.0,
          "branches": 0.0,
          "conditions": 0.0,
          "magnitude": 0.0,
          "assignments_average": 0.0,
          "branches_average": 0.0,
          "conditions_average": 0.0,
          "assignments_min": 0.0,
          "assignments_max": 0.0,
          "branches_min": 0.0,
          "branches_max": 0.0,
          "conditions_min": 0.0,
          "conditions_max": 0.0
        }
      }
    }
  ],
  "metrics": {
    "nargs": {
      "total_functions": 0.0,
      "total_closures": 0.0,
      "average_functions": 0.0,
      "average_closures": 0.0,
      "total": 0.0,
      "average": 0.0,
      "functions_min": 0.0,
      "functions_max": 0.0,
      "closures_min": 0.0,
      "closures_max": 0.0
    },
    "nexits": {
      "sum": 0.0,
      "average": null,
      "min": 0.0,
      "max": 0.0
    },
    "cognitive": {
      "sum": 0.0,
      "average": null,
      "min": 0.0,
      "max": 0.0
    },
    "cyclomatic": {
      "sum": 2.0,
      "average": 1.0,
      "min": 1.0,
      "max": 1.0
    },
    "halstead": {
      "n1": 8.0,
      "N1": 17.0,
      "n2": 10.0,
      "N2": 11.0,
      "length": 28.0,
      "estimated_program_length": 57.219280948873624,
      "purity_ratio": 2.043545748174058,
      "vocabulary": 18.0,
      "volume": 116.75790004038474,
      "difficulty": 4.4,
      "level": 0.22727272727272727,
      "effort": 513.7347601776929,
      "time": 28.54082000987183,
      "bugs": 0.021381493945274617
    },
    "loc": {
      "sloc": 56.0,
      "ploc": 8.0,
      "lloc": 1.0,
      "cloc": 44.0,
      "blank": 6.0,
      "sloc_average": 28.0,
      "ploc_average": 4.0,
      "lloc_average": 0.5,
      "cloc_average": 22.0,
      "blank_average": 3.0,
      "sloc_min": 22.0,
      "sloc_max": 22.0,
      "cloc_min": 16.0,
      "cloc_max": 16.0,
      "ploc_min": 4.0,
      "ploc_max": 4.0,
      "lloc_min": 1.0,
      "lloc_max": 1.0,
      "blank_min": 2.0,
      "blank_max": 2.0
    },
    "nom": {
      "functions": 0.0,
      "closures": 0.0,
      "functions_average": 0.0,
      "closures_average": 0.0,
      "total": 0.0,
      "average": 0.0,
      "functions_min": 0.0,
      "functions_max": 0.0,
      "closures_min": 0.0,
      "closures_max": 0.0
    },
    "mi": {
      "mi_original": 80.57676929518612,
      "mi_sei": 89.77768613715239,
      "mi_visual_studio": 47.12091771648311
    },
    "abc": {
      "assignments": 0.0,
      "branches": 0.0,
      "conditions": 0.0,
      "magnitude": 0.0,
      "assignments_average": 0.0,
      "branches_average": 0.0,
      "conditions_average": 0.0,
      "assignments_min": 0.0,
      "assignments_max": 0.0,
      "branches_min": 0.0,
      "branches_max": 0.0,
      "conditions_min": 0.0,
      "conditions_max": 0.0
    }
  }
}
