snapshots/DeepSpeech/native_client/kenlm/util/double-conversion/strtod.h.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 45
kind: unit
spaces:
  - name: kenlm_double_conversion
    start_line: 33
    end_line: 43
    kind: namespace
    spaces: []
    metrics:
      nargs:
        total_functions: 0
        total_closures: 0
        average_functions: 0
        average_closures: 0
        total: 0
        average: 0
        functions_min: 0
        functions_max: 0
        closures_min: 0
        closures_max: 0
      nexits:
        sum: 0
        average: NaN
        min: 0
        max: 0
      cognitive:
        sum: 0
        average: NaN
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        average: 1
        min: 1
        max: 1
      halstead:
        n1: 7
        N1: 17
        n2: 6
        N2: 9
        length: 26
        estimated_program_length: 35.161
        purity_ratio: 1.352
        vocabulary: 13
        volume: 96.211
        difficulty: 5.25
        level: 0.19
        effort: 505.11
        time: 28.062
        bugs: 0.021
      loc:
        sloc: 11
        ploc: 4
        lloc: 2
        cloc: 4
        blank: 3
        sloc_average: 11
        ploc_average: 4
        lloc_average: 2
        cloc_average: 4
        blank_average: 3
        sloc_min: 11
        sloc_max: 11
        cloc_min: 4
        cloc_max: 4
        ploc_min: 4
        ploc_max: 4
        lloc_min: 2
        lloc_max: 2
        blank_min: 3
        blank_max: 3
      nom:
        functions: 0
        closures: 0
        functions_average: 0
        closures_average: 0
        total: 0
        average: 0
        functions_min: 0
        functions_max: 0
        closures_min: 0
        closures_max: 0
      mi:
        mi_original: 108.178
        mi_sei: 120.675
        mi_visual_studio: 63.262
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
metrics:
  nargs:
    total_functions: 0
    total_closures: 0
    average_functions: 0
    average_closures: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  nexits:
    sum: 0
    average: NaN
    min: 0
    max: 0
  cognitive:
    sum: 0
    average: NaN
    min: 0
    max: 0
  cyclomatic:
    sum: 2
    average: 1
    min: 1
    max: 1
  halstead:
    n1: 7
    N1: 17
    n2: 8
    N2: 12
    length: 29
    estimated_program_length: 43.651
    purity_ratio: 1.505
    vocabulary: 15
    volume: 113.3
    difficulty: 5.25
    level: 0.19
    effort: 594.824
    time: 33.046
    bugs: 0.024
  loc:
    sloc: 45
    ploc: 8
    lloc: 2
    cloc: 32
    blank: 7
    sloc_average: 22.5
    ploc_average: 4
    lloc_average: 1
    cloc_average: 16
    blank_average: 3.5
    sloc_min: 11
    sloc_max: 11
    cloc_min: 4
    cloc_max: 4
    ploc_min: 4
    ploc_max: 4
    lloc_min: 2
    lloc_max: 2
    blank_min: 3
    blank_max: 3
  nom:
    functions: 0
    closures: 0
    functions_average: 0
    closures_average: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  mi:
    mi_original: 84.276
    mi_sei: 94.35
    mi_visual_studio: 49.284
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0

